5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1679_1101.log
== TEST (2019-04-30 16:46:36) 
-- CODE:
valor = float(input("Valor total: "))
print("Entradas: ", valor,"kwh")
-- OUTPUT:
Entradas:  -56.0 kwh
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:46:59) 
-- CODE:
valor = float(input("Valor total: "))
print("Entradas: ", valor,"kwh e tipo c")
-- OUTPUT:
Entradas:  -56.0 kwh e tipo c
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:49:46) 
-- CODE:
CDE = float(input("Entrada: "))

-- OUTPUT:
Entradas:  -56.0 kwh e tipo c
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:49:52) 
-- CODE:
CDE = float(input("Entrada: "))

-- OUTPUT:
Entradas:  -56.0 kwh e tipo c
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:50:11) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = 

-- ERROR:
File "XXXX", line 2
    TIPO = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:50:27) 
-- CODE:
CDE = float(input("Entrada: "))
print(CDE)

-- OUTPUT:
-56.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:50:30) 
-- CODE:
CDE = float(input("Entrada: "))
print(CDE)

-- OUTPUT:
-56.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:50:37) 
-- CODE:
CDE = float(input("Entrada: "))
print(CDE)

-- OUTPUT:
-56.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:51:00) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo:")

-- EXECUTION TIME:
0.21062
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:

-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:51:01) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo:")

-- OUTPUT:
-56.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:54:41) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo:")
print("Entradas:", CDE,"kwh", e, TIPO)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Entradas:", CDE,"kwh", e, TIPO)
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:55:07) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo:")
print("Entradas:", CDE,"kwh e", TIPO)

-- OUTPUT:
Entradas: -56.0 kwh e I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:55:25) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo:")
print("Entradas:", CDE,"kwh e tipo", TIPO)

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:01:53) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo:")
print("Entradas:", CDE,"kwh e tipo", TIPO)

if((TIPO == "r" or "R"))

-- ERROR:
File "XXXX", line 5
    if((TIPO == "r" or "R"))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:10:39) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo:")
print("Entradas:", CDE,"kwh e tipo", TIPO)

if((TIPO == "r" or "R") and (TIPO <= 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", )

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if((TIPO == "r" or "R") and (TIPO <= 500)):
TypeError: '<=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:11:20) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo: ")
print("Entradas:", CDE,"kwh e tipo", TIPO)

if((TIPO == "r" or "R") and (CDE <= 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", )

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Entrada: -56.0 kwh e tipo I
Valor total: R$
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:12:08) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo: ")
print("Entradas:", CDE,"kwh e tipo", TIPO)

if((TIPO == "r" or "R") and (CDE <= 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.44))

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Entrada: -56.0 kwh e tipo I
Valor total: R$ -24.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:12:13) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo: ")
print("Entradas:", CDE,"kwh e tipo", TIPO)

if((TIPO == "r" or "R") and (CDE <= 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.44))

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Entrada: -56.0 kwh e tipo I
Valor total: R$ -24.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:12:41) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo: ")
print("Entradas:", CDE,"kwh e tipo", TIPO)

if((TIPO == "r" or "R") and (CDE <= 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.44))

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Entrada: -56.0 kwh e tipo I
Valor total: R$ -24.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:12:49) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo: ")
print("Entradas:", CDE,"kwh e tipo", TIPO)

if((TIPO == "r" or "R") and (CDE <= 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.44))

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Entrada: -56.0 kwh e tipo I
Valor total: R$ -24.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:14:05) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo: ")
print("Entradas:", CDE,"kwh e tipo", TIPO)

if((TIPO == "r" or "R") and (CDE <= 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.44))

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Entrada: -56.0 kwh e tipo I
Valor total: R$ -24.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:15:40) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo: ")
print("Entradas:", CDE,"kwh e tipo", TIPO)

if((TIPO == "r" or "R") and (CDE <= 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.44))
	
elif((TIPO == "r" or "R")and(CDE > 500)):
	

-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:15:42) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo: ")
print("Entradas:", CDE,"kwh e tipo", TIPO)

if((TIPO == "r" or "R") and (CDE <= 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.44))
	
elif((TIPO == "r" or "R")and(CDE > 500)):
	

-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:17:53) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo: ")
print("Entradas:", CDE,"kwh e tipo", TIPO)

if ((TIPO == "r" or "R") and (CDE <= 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.44))
	
elif ((TIPO == "r" or "R") and (CDE > 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.65))
	

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Entrada: -56.0 kwh e tipo I
Valor total: R$ -24.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:18:17) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo: ")
print("Entradas:", CDE,"kwh e tipo", TIPO)

if ((TIPO == "r" or "R") and (CDE <= 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.44))
	
elif ((TIPO == "r" or "R") and (CDE > 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.65))
	

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Entrada: -56.0 kwh e tipo I
Valor total: R$ -24.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:19:34) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo: ")
print("Entradas:", CDE,"kwh e tipo", TIPO)

if ((TIPO == "r" or "R") and (CDE <= 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.44))
	
elif ((TIPO == "r" or "R") and (CDE > 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.65))

elif 

	

-- ERROR:
File "XXXX", line 13
    elif 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:25:11) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo: ")
print("Entradas:", CDE,"kwh e tipo", TIPO)

if ((TIPO == "r" or "R") and (CDE <= 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.44))
	
elif ((TIPO == "r" or "R") and (CDE > 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.65))

elif ((TIPO == "i" or "I") and (CDE <= 1000):
		print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
		print("Valor total: R$",(CDE * 0.55)



	

-- ERROR:
File "XXXX", line 13
    elif ((TIPO == "i" or "I") and (CDE <= 1000):
                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:25:22) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo: ")
print("Entradas:", CDE,"kwh e tipo", TIPO)

if ((TIPO == "r" or "R") and (CDE <= 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.44))
	
elif ((TIPO == "r" or "R") and (CDE > 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.65))

elif ((TIPO == "i" or "I") and (CDE <= 1000)):
		print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
		print("Valor total: R$",(CDE * 0.55)



	

-- ERROR:
File "XXXX", line 20
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:25:27) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo: ")
print("Entradas:", CDE,"kwh e tipo", TIPO)

if ((TIPO == "r" or "R") and (CDE <= 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.44))
	
elif ((TIPO == "r" or "R") and (CDE > 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.65))

elif ((TIPO == "i" or "I") and (CDE <= 1000)):
		print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
		print("Valor total: R$",(CDE * 0.55))



	

-- EXECUTION TIME:
0.202089
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Entrada: -56.0 kwh e tipo I
Valor total: R$ -24.64
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Entrada: 955.5 kwh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:25:28) 
-- CODE:
CDE = float(input("Entrada: "))
TIPO = input("Tipo: ")
print("Entradas:", CDE,"kwh e tipo", TIPO)

if ((TIPO == "r" or "R") and (CDE <= 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.44))
	
elif ((TIPO == "r" or "R") and (CDE > 500)):
	print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
	print("Valor total: R$", (CDE * 0.65))

elif ((TIPO == "i" or "I") and (CDE <= 1000)):
		print("Entrada:", CDE, "kwh e tipo", TIPO.upper())
		print("Valor total: R$",(CDE * 0.55))



	

-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Entrada: -56.0 kwh e tipo I
Valor total: R$ -24.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:25:12) 
-- CODE:
con=float(input("consumo de energia:"))
tipo=input("tipo de instalacao: ( R/I/C)")

if ( con < 0 ):
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Dados invalidos")
elif ( tipo == "R" and con <= 500):
	preco = 0.44
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "R" and con > 500):
	preco = 0.65
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "I" and con <= 5000):
	preco = 0.55
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "I" and con > 5000):
	preco = 0.60
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "C" and con <= 1000):
	preco = 0.55
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "C" and con > 1000):
	preco = 0.60
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
else:
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Dados invalidos")

-- EXECUTION TIME:
0.147742
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:02:43) 
-- CODE:
con=float(input("consumo de energia:"))
tipo=input("tipo de instalacao: ( R/I/C)")

if ( con < 0 ):
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Dados invalidos")
elif ( tipo == "R" and con <= 500):
	preco = 0.44
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "R" and con > 500):
	preco = 0.65
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "I" and con <= 5000):
	preco = 0.55
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "I" and con > 5000):
	preco = 0.60
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "C" and con <= 1000):
	preco = 0.55
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "C" and con > 1000):
	preco = 0.60
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
else:
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:48:47) 
-- CODE:
con=float(input("consumo de energia:"))
tipo=input("tipo de instalacao: ( R/I/C)")

if ( con < 0 ):
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Dados invalidos")
elif ( tipo == "R" and con <= 500):
	preco = 0.44
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "R" and con > 500):
	preco = 0.65
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "I" and con <= 5000):
	preco = 0.55
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "I" and con > 5000):
	preco = 0.60
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "C" and con <= 1000):
	preco = 0.55
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "C" and con > 1000):
	preco = 0.60
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
else:
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:49:09) 
-- CODE:
con=float(input("consumo de energia:"))
tipo=input("tipo de instalacao: ( R/I/C)")

if ( con < 0 ):
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Dados invalidos")
elif ( tipo == "R" and con <= 500):
	preco = 0.44
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "R" and con > 500):
	preco = 0.65
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "I" and con <= 5000):
	preco = 0.55
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "I" and con > 5000):
	preco = 0.60
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "C" and con <= 1000):
	preco = 0.55
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "C" and con > 1000):
	preco = 0.60
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
else:
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:49:27) 
-- CODE:
con=float(input("consumo de energia:"))
tipo=input("tipo de instalacao: ( R/I/C)")

if ( con < 0 ):
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Dados invalidos")
elif ( tipo == "R" and con <= 500):
	preco = 0.44
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "R" and con > 500):
	preco = 0.65
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "I" and con <= 5000):
	preco = 0.55
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "I" and con > 5000):
	preco = 0.60
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "C" and con <= 1000):
	preco = 0.55
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "C" and con > 1000):
	preco = 0.60
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
else:
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:52:52) 
-- CODE:
con=float(input("consumo de energia:"))
tipo=input("tipo de instalacao: ( R/I/C)")

if ( con < 0 ):
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Dados invalidos")
elif ( tipo == "R" and con <= 500):
	preco = 0.44
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "R" and con > 500):
	preco = 0.65
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "I" and con <= 5000):
	preco = 0.55
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "I" and con > 5000):
	preco = 0.60
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "C" and con <= 1000):
	preco = 0.55
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "C" and con > 1000):
	preco = 0.60
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
else:
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:56:30) 
-- CODE:
con=float(input("consumo de energia:"))
tipo=input("tipo de instalacao: ( R/I/C)")

if ( con < 0 ):
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Dados invalidos")
elif ( tipo == "R" and con <= 500):
	preco = 0.44
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "R" and con > 500):
	preco = 0.65
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "I" and con <= 5000):
	preco = 0.55
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "I" and con > 5000):
	preco = 0.60
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "C" and con <= 1000):
	preco = 0.55
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "C" and con > 1000):
	preco = 0.60
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
else:
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:01:05) 
-- CODE:
con=float(input("consumo de energia:"))
tipo=input("tipo de instalacao: ( R/I/C)")

if ( con < 0 ):
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Dados invalidos")
elif ( tipo == "R" and con <= 500):
	preco = 0.44
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "R" and con > 500):
	preco = 0.65
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "I" and con <= 5000):
	preco = 0.55
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "I" and con > 5000):
	preco = 0.60
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "C" and con <= 1000):
	preco = 0.55
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "C" and con > 1000):
	preco = 0.60
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
else:
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:46:21) 
-- CODE:
con=float(input("consumo de energia:"))
tipo=input("tipo de instalacao: ( R/I/C)")

if ( con < 0 ):
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Dados invalidos")
elif ( tipo == "R" and con <= 500):
	preco = 0.44
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "R" and con > 500):
	preco = 0.65
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "I" and con <= 5000):
	preco = 0.55
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "I" and con > 5000):
	preco = 0.60
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "C" and con <= 1000):
	preco = 0.55
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
elif ( tipo == "C" and con > 1000):
	preco = 0.60
	total = con * preco
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Valor total: R$",round(total,2))
else:
	print("Entradas:",con,"kWh e tipo",tipo)
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
